<?xml version="1.0"?>
<package format="2">
  <name>yolox_ros_wrapper_msgs</name>
  <version>0.0.0</version>
  <description>The yolox_ros_wrapper_msgs package</description>

  <maintainer email="chakio@todo.todo">chakio</maintainer>

  <license>TODO</license>
  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
